force-app/main/default/objects/fdsdeploy__Dashboard_Component__mdt/fdsdeploy__Dashboard_Component__mdt.object-meta.xml
<CustomObject>
    <label>Dashboard Component</label>
    <pluralLabel>Dashboard Components</pluralLabel>
</CustomObject>