force-app/main/default/objects/fdsdeploy__Dashboard_Component__mdt/fields/fdsdeploy__Accepts_Ticker__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__Accepts_Ticker__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the dashboard component will accept a company ticker for a focused view or not. Will not be available for record pages if it does not accept a ticker</description>
    <label>Accepts Ticker</label>
    <type>Checkbox</type>
</CustomField>