force-app/main/default/objects/fdsdeploy__Dashboard_Component__mdt/fields/fdsdeploy__Component_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__Component_Endpoint_URL__c</fullName>
    <description>FactSet endpoint for the specific dashboard component</description>
    <label>Component Endpoint URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>