force-app/main/default/objects/fdsdeploy__Dashboard_Component__mdt/fields/fdsdeploy__Component_Height__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__Component_Height__c</fullName>
    <description>Height for the component to display on a page</description>
    <label>Component Height</label>
    <length>10</length>
    <type>Text</type>
</CustomField>